Updated codebase to be complient with android market.

--- a/android/Boxmeupapp/res/values/strings.xml
+++ b/android/Boxmeupapp/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Boxmeup</string>
 	<string name="url_source">http://boxmeupapp.com</string>
+	<string name="javascript_interface">BoxmeupAndroid</string>
 </resources>
