Updated android app to have a context menu (when logged) for triggering scanners.  Added UPC lookup for quickly adding items with barcodes.  Added check for boxmeup host when scanning qr codes.

--- a/android/Boxmeupapp/res/values/strings.xml
+++ b/android/Boxmeupapp/res/values/strings.xml
@@ -2,5 +2,8 @@
 <resources>
     <string name="app_name">Boxmeup</string>
 	<string name="url_source">http://boxmeupapp.com</string>
+	<string name="valid_host">boxmeupapp.com</string>
 	<string name="javascript_interface">BoxmeupAndroid</string>
+	<string name="qr_scan">Scan Label</string>
+	<string name="upc_scan">Scan Product</string>
 </resources>
